<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/currency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/currency"
        android:textSize="30sp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <TextView
        android:id="@+id/from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from"
        android:textSize="20sp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        app:layout_constraintTop_toBottomOf="@id/currency"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/naira"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:autofillHints="test"
        android:hint="@string/naira_ngn"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/from"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to"
        android:textSize="20sp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="@id/naira"
        app:layout_constraintTop_toBottomOf="@id/naira" />

    <TextView
        android:id="@+id/bitcoin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:importantForAutofill="no"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/to"
        tools:hint="@string/bitcoin_btc"
        tools:ignore="TextContrastCheck" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchbtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:checked="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/round_up_result"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/bitcoin"
        tools:ignore="UseSwitchCompatOrMaterialXml" />


    <Button
        android:id="@+id/covert"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/switchbtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/convert"
        android:layout_marginTop="15dp"/>




</androidx.constraintlayout.widget.ConstraintLayout>